test/Test/Compile/Error/PolarityErrors/mixedSequential.vcl
network f : Tensor Rat [1] -> Tensor Rat [1]

property : Bool
property = forall y . exists x . f [x] == [y]